<resources>
    <string translatable="false" name="app_name">Connect Four!</string>
    <string name="bonjour">Bonjour!</string>

    <string name="parametres">Paramètres</string>
    <string name="taille_de_la_grille">Taille préférée pour une nouvelle partie</string>
    <string name="petite">Petite</string>
    <string name="moyenne">Moyenne</string>
    <string name="grande">Grande</string>

    <string name="continuer_partie_precedente">Continuer partie précédente</string>

    <string name="jouer">Jouer</string>
    <string name="jouer_enligne">Jouer en-ligne</string>

    <string name="connexion">Connexion</string>
    <string name="deconnexion">Déconnexion</string>

    <string name="joueur01">Alice</string>
    <string name="joueur02">Benoit</string>

    <string name="entete" translatable="false">↓</string>

    <string name="rouge">Rouge</string>
    <string name="bleu">Bleu</string>

    <string name="gagne_rouge">Les rouges gagnent!</string>
    <string name="gagne_bleu">Les bleus gagnent!</string>

</resources>
