<?xml version="1.0" encoding="utf-8"?>
<ca.cours5b5.nicolasparr.vues.pages.PParametres  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activites.AParametres"
    tools:layout_editor_absoluteY="81dp"
    android:id="@+id/page_parametres">

    <Switch
        android:id="@+id/switch_continuer_partie"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="0dp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="8dp"
        android:text="@string/continuer_partie_precedente"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout"
        app:layout_constraintStart_toStartOf="@+id/linearLayout"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.13" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="8dp"
        android:background="@color/colorPrimaryTresPale"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:paddingHorizontal="16dp"
        android:paddingVertical="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.17"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.14999998">


        <CheckBox
            android:id="@+id/check_petite_grille"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/petite"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="16dp" />

        <CheckBox
            android:id="@+id/check_moyenne_grille"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/moyenne"
            tools:layout_editor_absoluteX="38dp"
            tools:layout_editor_absoluteY="162dp" />

        <CheckBox
            android:id="@+id/check_grande_grille"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/grande"
            tools:layout_editor_absoluteX="52dp"
            tools:layout_editor_absoluteY="318dp" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/taille_de_la_grille"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/linearLayout"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

</ca.cours5b5.nicolasparr.vues.pages.PParametres>
